Монтирование томов mysql

--- a/compose.yaml
+++ b/compose.yaml
@@ -31,6 +31,7 @@ services:
     volumes:
       # Монтирование тома в контейнере
       - /home/usr1/simple-django-project/world.sql:/mysql-files/world.sql
+      - /var/lib/mysql:/var/lib/mysql
 
   django:
     image: sergeypetkov/django:${TAG}
