--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,9 @@ services:
       # Монтирование тома в контейнере
       - /home/usr1/simple-django-project/world.sql:/mysql-files/world.sql
       - /var/lib/mysql1:/var/lib/mysql
+      - /home/usr1/simple-django-project/source-mysql.sh:/script/source-mysql.sh
+
+    command: ["/script/source-mysql.sh"]
 
   django:
     image: sergeypetkov/django:${TAG}
